lvl1 almost done

--- a/lesson4/package.json
+++ b/lesson4/package.json
@@ -12,8 +12,11 @@
     "body-parser": "^1.15.2",
     "cheerio": "^0.20.0",
     "consolidate": "^0.14.1",
+    "cookie-session": "^2.0.0-alpha.1",
     "express": "^4.14.0",
     "handlebars": "^4.0.5",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "serve-static": "^1.11.1",
+    "session": "^0.1.0"
   }
 }
