--- a/lesson4/package.json
+++ b/lesson4/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cheerio": "^0.20.0",
+    "connect": "^3.4.1",
     "consolidate": "^0.14.1",
     "cookie-session": "^2.0.0-alpha.1",
+    "cookie-sessions": "0.0.2",
     "express": "^4.14.0",
     "handlebars": "^4.0.5",
     "request": "^2.74.0",
