--- a/lesson4/package.json
+++ b/lesson4/package.json
@@ -13,8 +13,9 @@
     "cheerio": "^0.20.0",
     "connect": "^3.4.1",
     "consolidate": "^0.14.1",
+    "cookie": "^0.3.1",
+    "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-alpha.1",
-    "cookie-sessions": "0.0.2",
     "express": "^4.14.0",
     "handlebars": "^4.0.5",
     "request": "^2.74.0",
