--- a/lesson5/package.json
+++ b/lesson5/package.json
@@ -12,7 +12,10 @@
     "body-parser": "^1.15.2",
     "consolidate": "^0.14.1",
     "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-alpha.1",
     "express": "^4.14.0",
-    "mysql": "^2.11.1"
+    "handlebars": "^4.0.5",
+    "mysql": "^2.11.1",
+    "passport": "^0.3.2"
   }
 }
